migrating particle kinetics, changes for responsivness

--- a/src/components/CalloutContainer.astro
+++ b/src/components/CalloutContainer.astro
@@ -1,6 +1,6 @@
 <style>
     .card-container{
-        width: min(100%, 400px);
+        width: calc(100%);
     }
 
     .sticky{
@@ -17,7 +17,7 @@
 </style>
 
 <div class="d-flex flex-column align-items-center w-100 sticky">
-    <div class="card-container">
+    <div class="card-container px-2">
         <slot />
     </div>
     
