--- a/src/components/CalloutCard.astro
+++ b/src/components/CalloutCard.astro
@@ -3,6 +3,10 @@ const {title='Did you know?'} = Astro.props;
 ---
 
 <div class="card w-100 p-2 mb-2" style="background: #e6f1f6;">
-    <div class="card-title"><p class="fw-bold mb-1 h3">{title}</p></div>
-    <slot />
+    <div class="card-title">
+        <p class="fw-bold mb-1 h3">{title}</p>
+    </div>
+    <div class="w-100">
+        <slot />
+    </div>
 </div>
