--- a/src/components/DisplayEquation.astro
+++ b/src/components/DisplayEquation.astro
@@ -15,6 +15,8 @@ const { equation, id="", title="", derivation="", background=""} = Astro.props;
         border: 1px solid #444;
         border-radius: 5px;
     }
+
+    
 </style>
 
 
@@ -24,8 +26,10 @@ const { equation, id="", title="", derivation="", background=""} = Astro.props;
         {title && title}{id && <small>{` #${id}`}</small>}
     </div>
 
-    {`$$ ${equation} $$`}
-
+    <div style="overflow-y: hidden; overflow-x: auto;">
+        {`$$ ${equation} $$`}
+    </div>
+    
     {derivation && <button class="btn btn-secondary py-0" id={'derivation_btn_'+id}>Derivation</button>}
     {derivation && 
         <div id={'derivation_menu_'+id}>
