--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,16 +22,16 @@ const { title } = Astro.props;
 		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
-		<script src="/mechref/static/js/simplified_view.js" is:inline></script>
-		<script src="/mechref/jquery-2.1.4.min.js" is:inline></script>
-		<script src="/mechref/PrairieDraw.js" is:inline></script>
-		<script src="/mechref/PrairieGeom.js" is:inline></script>
-		<script src="/mechref/sha1.js" is:inline></script>
-		<script src="/mechref/sylvester.js" is:inline></script>
+		<script src="/static/js/simplified_view.js" is:inline></script>
+		<script src="/jquery-2.1.4.min.js" is:inline></script>
+		<script src="/PrairieDraw.js" is:inline></script>
+		<script src="/PrairieGeom.js" is:inline></script>
+		<script src="/sha1.js" is:inline></script>
+		<script src="/sylvester.js" is:inline></script>
 
 		
-		<link rel="stylesheet" href="/mechref/static/css/main.css">
-		<link rel="stylesheet" href="/mechref/static/css/sidebar.css">
+		<link rel="stylesheet" href="/static/css/main.css">
+		<link rel="stylesheet" href="/static/css/sidebar.css">
 	</head>
 	<body class="pb-5 w-100">
 		<Navbar/>
