--- a/src/pages/sol/beam_deflection.astro
+++ b/src/pages/sol/beam_deflection.astro
@@ -23,13 +23,13 @@ import Itemize from "../../components/Itemize.astro"
 
 <SubSection title="Sign Conventions">
 
-<Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/signConvention1.png' width='4'> From ref pages</Image>
+<Image src='/Solid_Mechanics/Beam Deflection-Figures/signConvention1.png' width='4'> From ref pages</Image>
 
 </SubSection>
 
 <SubSection title="Boundary Conditions">
 
-<Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/BoundryConditions.png' width='4'> From ref pages</Image>
+<Image src='/Solid_Mechanics/Beam Deflection-Figures/BoundryConditions.png' width='4'> From ref pages</Image>
 
 </SubSection>
 
@@ -37,7 +37,7 @@ import Itemize from "../../components/Itemize.astro"
 
  <strong>Elastic Curve of a Beam:</strong> 
 
-<Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/ElasticCurveBeam.png' width='2.5'>  <BlueText>Taken from TAM251 Lecture Notes - L12S3</BlueText></Image>
+<Image src='/Solid_Mechanics/Beam Deflection-Figures/ElasticCurveBeam.png' width='2.5'>  <BlueText>Taken from TAM251 Lecture Notes - L12S3</BlueText></Image>
 
 
  Moment-curvature equation:
@@ -45,7 +45,7 @@ import Itemize from "../../components/Itemize.astro"
 <DisplayEquation equation='M(x) = \\frac{E(x)I(x)}{\\rho(x)}\\' />
 <DisplayEquation equation='\\kappa = \\frac{1}{\\rho} = \\frac{M(x)}{EI}\\' />
 
-<Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/ElasticCurveGraph.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S3</BlueText></Image>
+<Image src='/Solid_Mechanics/Beam Deflection-Figures/ElasticCurveGraph.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S3</BlueText></Image>
 
  Governing equation of the elastic curve:
 <DisplayEquation equation='\\frac{d^2y}{dx^2} = \\frac{M(x)}{EI}\\' />
@@ -95,11 +95,11 @@ import Itemize from "../../components/Itemize.astro"
    
     <strong>Example:</strong> Overhanging Beam
    
-   <Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/Overhang Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S8</BlueText></Image>
+   <Image src='/Solid_Mechanics/Beam Deflection-Figures/Overhang Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S8</BlueText></Image>
    
     <strong>Example:</strong> Cantilever Beam
    
-   <Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/Cantilever Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S8</BlueText></Image>
+   <Image src='/Solid_Mechanics/Beam Deflection-Figures/Cantilever Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S8</BlueText></Image>
    
    </SubSection>
 
@@ -107,7 +107,7 @@ import Itemize from "../../components/Itemize.astro"
 <SubSection title="Beam Solutions"> 
     <BlueText>Common beam deflection solutions have been worked out.</BlueText>
     
-    <Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/Common Solutions.png' width='5'>  <BlueText> Taken from the formula sheet</BlueText></Image>
+    <Image src='/Solid_Mechanics/Beam Deflection-Figures/Common Solutions.png' width='5'>  <BlueText> Taken from the formula sheet</BlueText></Image>
     
     
     
@@ -117,7 +117,7 @@ import Itemize from "../../components/Itemize.astro"
     
      <BlueText><strong>Example:</strong> Moment and distributed load</BlueText>
     
-    <Image src='/mechref/Solid_Mechanics/Beam Deflection-Figures/Superposition Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S16</BlueText></Image>
+    <Image src='/Solid_Mechanics/Beam Deflection-Figures/Superposition Ex.png' width='3'>  <BlueText>Taken from TAM251 Lecture Notes - L12S16</BlueText></Image>
     
 </SubSection>
 
