--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,19 +13,19 @@
             <ul class="navbar-nav me-auto mb-0 ">
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/mechref">Home page</a>
+                    <a class="nav-link active text-white py-1" href="/">Home page</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/mechref/sta">Statics (210/211)</a>
+                    <a class="nav-link active text-white py-1" href="/sta">Statics (210/211)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/mechref/dyn">Dynamics (212)</a>
+                    <a class="nav-link active text-white py-1" href="/dyn">Dynamics (212)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/mechref/sol">Solid Mechanics (251)</a>
+                    <a class="nav-link active text-white py-1" href="/sol">Solid Mechanics (251)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
             </ul>
